# opvc-kit

./: .gitignore  README.md  pyproject.toml  run_dataset.sh
artifacts/: align_config.json  step1_out_debug.json  step1_out_debug_full.json  step3_out_debug.json  theta_pkg_debug.pt
configs/datasets/: optc_051_win.json  optc_051_win.json.bak.20260123_192329  optc_051_win_example.json  optc_051_win_v2.json
configs/pipelines/: optc_051_win.auto.json  optc_051_win.debug.json  optc_051_win.manual.json  optc_051_win_v2.auto.json  pipeline_template.full.example.json
docs/: 01_notation.md  02_interface_contract.md  03_REPO_LAYOUT.md  DATASETS_AND_PIPELINE.md  demo.py
scripts/: add_host_to_eventlist.py  analyze_step3_jsonl.py  build_eventlist.py  patch_host_support.py  patch_step1_preserve_meta.py  profile_dataset.py  run_pipeline.py  run_step1.py  run_step123_debug.py  run_step123_from_aligned_opcnt.py  run_step2.py  run_step2_train_from_step1_out.py  run_step3.py  run_step3_batch.py  run_step3_from_step1_json.py  train_step1.py  train_step2_from_step1_json.py  train_step3.py
src/opvc/: __init__.py  __main__.py  contracts.py  data.py  demo.py  dp_accountant.py  engineering.py  host.py  io.py  running_stats.py  step1.py  step1_train.py  step2.py  step2_align_final_train.py  step2_losses.py  step3.py  step3_losses.py  step3_train.py  utils.py
src/opvc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/opvc/adapters/: __init__.py  base.py  csv_adapter.py  registry.py
